--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 97vh;
-    background: linear-gradient(black, blue);
+    background: linear-gradient(white, rgb(239, 239, 189));
 }
 
 @media(min-height: 900px){
