--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
     border: 1px solid black;
     border-radius: 20px;
     height: 650px;
-    width: 550px;
+    width: 590px;
     display: flex;
 	justify-content: center;
 }
@@ -13,6 +13,11 @@
     height: 700px;
     width: 600px;
  }   
+}
+
+.top-content{
+    margin: 0 auto;
+    justify-content: center;
 }
 
 #input{
