add logic so task is pressable + working on removing tasks

--- a/src/App.css
+++ b/src/App.css
@@ -87,3 +87,9 @@
     opacity: 0;
     transition: visibility 0s 2s, opacity 2s linear;
 }
+
+.task-btn{
+    border: none;
+    background: none;
+    width: 100%;
+}
