--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,10 @@
     margin-left: 15px;
     justify-content: start;
     align-items: start;
+    height: 80%;
+    width: 94%;
+    background-color: white;
+    border-radius: 10px;
 }
 
 .task{
@@ -70,6 +74,7 @@
     padding-left: 5px;
     width: 96%;
     border-radius: 5px;
+    border: 1px solid black;
 }
 
 .task:hover{
