--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: linear-gradient(darkblue, rgb(129, 0, 152));
+    background: linear-gradient(black, rgb(73, 7, 148));
 }
 
 
