--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,45 @@
 	justify-content: center;
 }
 
+
 @media(min-height: 900px){
  .content{
     height: 700px;
     width: 500px;
  }   
 }
+
+@media(max-width: 455px) {
+    .content {
+        height: 700px;
+        width: 400px;
+    }
+
+    .top-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #input,
+    #add-task {
+        width: calc(50% - 5px); /* 50% width with some margin in between */
+        margin-bottom: 5px;
+    }
+
+    .top-content {
+        display: flex;
+        flex-direction: row; /* Display children in a row */
+        align-items: center;
+        justify-content: space-between; /* Add space between the input and button */
+    }
+
+    /* .task {
+        margin: 0 auto;
+        overflow: hidden; or auto, scroll, etc. depending on your preference
+    } */
+}
+
 
 .top-content{
     margin: 0 auto;
@@ -85,21 +118,16 @@
 
 .task {
     background-color: rgb(88, 5, 121);
-    /* background: linear-gradient(rgb(4, 4, rgb(56, 9, 76), 95)); */
     color: white;
     font-size: larger;
     margin-top: 5px;
-    height: fit-content;
     padding: 10px;
-    justify-content: start;
-    align-items: center;
-    display: flex;
-    padding-left: 5px;
-    width: 90%;
-    position: relative;
     border: 2px solid white;
     border-radius: 10px;
     text-align: left;
+    overflow: hidden;
+    white-space: normal;
+    word-wrap: break-word;
 }
 
 
