fixed mobile layout

--- a/src/App.css
+++ b/src/App.css
@@ -16,35 +16,42 @@
  }   
 }
 
-@media(max-width: 455px) {
+@media(max-width: 400px) {
     .content {
+        margin: 0 auto;
         height: 700px;
-        width: 400px;
+        width: 250px;
     }
 
     .top-content {
         display: flex;
         flex-direction: column;
         align-items: center;
+        width: 100%;
     }
 
     #input,
     #add-task {
-        width: calc(50% - 5px); /* 50% width with some margin in between */
+        /* width: 100%; Take full width */
         margin-bottom: 5px;
     }
 
-    .top-content {
-        display: flex;
-        flex-direction: row; /* Display children in a row */
-        align-items: center;
-        justify-content: space-between; /* Add space between the input and button */
+    #input{
+        font-size: small;
+        width: fit-content;
+
     }
 
-    /* .task {
-        margin: 0 auto;
-        overflow: hidden; or auto, scroll, etc. depending on your preference
-    } */
+    #input::placeholder{
+        /* width: 50%; */
+        font-size: small;
+    }
+
+    
+
+    .task {
+        width: auto;
+    }
 }
 
 
